[package]
name = "oidc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["server"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["env", "cargo"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
const_format = "0.2.32"
rand = "0.8.5"
base64 = "0.22.1"
sha2 = "0.10.8"
serde_urlencoded = "0.7.1"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
syntect = "5.0"
